--- a/src/_includes/components/header.njk
+++ b/src/_includes/components/header.njk
@@ -1,3 +1,8 @@
-<header class="container mx-auto section">
-    <h1>Luke's Kindle Notes</h1>
+<header class="container relative px-4 mx-auto mt-4 mb-10 text-center bg-white rounded-lg section">
+    <h1 class="text-base font-bold uppercase">
+        <a href="/">Luke's Kindle Notes</a>
+    </h1>
+    <a href="https://www.goodreads.com/review/list/54909215" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-goodreads fa-2x icon"></i>
+    </a>
 </header>
