--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -3,6 +3,7 @@
     <head>
         {# {% include "components/head.njk" %} #}
         <title>Kindle Notes App</title>
+        <script src="https://kit.fontawesome.com/189183f6f0.js" crossorigin="anonymous"></script>
         {% if env == 'production' %}
             {# capture the CSS content and store is Nunjucks variable called 'css' #}
             {% set css %}{% include "css/style.min.css" %}{% endset%}
