--- a/src/notes-pages.njk
+++ b/src/notes-pages.njk
@@ -9,10 +9,13 @@ permalink: "notes/{{ bookNote.fileName | slug }}/"
 <section class="section">
     <div class="container">
         <h1>{{bookNote.title}}</h1>
-        <a href="{{bookNote.link}}">Go To Notes</a>
-        <object data="/static/pdfs/{{bookNote.fileName}}" type="application/pdf" width="100%" height="700px" class="my-3">
+        {# <a href="{{bookNote.link}}">Go To Notes</a> #}
+        {# <object data="/static/pdfs/{{bookNote.previewLink}}" type="application/pdf" width="100%" height="700px" class="my-3">
             <p>Sorry, your browser does not support PDFs.</p>
-        </object>
+        </object> #}
+        <iframe src="{{bookNote.previewLink}}" width="100%" height="600px" class="my-3"></iframe>
+        {# <iframe src="{{bookNote.link}}" width="100%" height="100%" style="width: 100%; height: 100%;" frameborder="0" scrolling="no"></iframe> #}
+
     </div>
 
 </section>
