--- a/src/_includes/components/header.njk
+++ b/src/_includes/components/header.njk
@@ -1,8 +1,12 @@
 <header class="container relative px-4 mx-auto mt-4 mb-10 text-center bg-white rounded-lg section">
-    <h1 class="text-base font-bold uppercase">
+    <h1 class="text-lg font-bold uppercase">
         <a href="/">Luke's Kindle Notes</a>
     </h1>
-    <a href="https://www.goodreads.com/review/list/54909215" target="_blank" rel="noopener noreferrer">
-        <i class="fab fa-goodreads fa-2x icon"></i>
+    <button class="rebuild">
+        <i class="text-xl fas fa-sync-alt md:text-3xl hover:text-teal-700"></i>
+    </button>
+    <a href="https://www.goodreads.com/review/list/54909215" target="_blank" rel="noopener noreferrer" class="icon">
+        <i class="text-2xl fab fa-goodreads md:text-3xl hover:text-teal-700"></i>
     </a>
+    <span id="rebuild-message" class="absolute px-4 py-2 bg-white rounded-lg"></span>
 </header>
