--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -596,7 +596,7 @@ video {
 }
 
 body {
-  background-color: #e3e8e8;
+  background-color: #d5e8e8;
 }
 
 header {
@@ -620,6 +620,10 @@ a {
   color: inherit;
 }
 
+i {
+  transition: color 0.2s ease-out;
+}
+
 .section {
   width: 100%;
   padding-top: 1rem;
@@ -639,7 +643,9 @@ a {
 }
 
 .book {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   width: 100%;
   padding: 1.5rem;
   background-color: #fff;
@@ -647,11 +653,59 @@ a {
   border-color: #e2e8f0;
 }
 
+/* goodreads icons */
+
 .icon {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   right: 20px;
+}
+
+.downloadIcon {
+  top: 0;
+  right: 25px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.rebuild {
+  position: absolute;
+  outline: none;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 20px;
+}
+
+.rebuild:focus {
+  outline: none;
+}
+
+#rebuild-message {
+  display: none;
+  top: 125%;
+  left: 0;
+}
+
+#rebuild-message:before {
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: 10px;
+  height: 10px;
+  width: 10px;
+  transform: rotate(45deg);
+  background: #fff;
+}
+
+#rebuild-message.success {
+  display: inline-block;
+  color: green;
+}
+
+#rebuild-message.error {
+  display: inline-block;
+  color: red;
 }
 
 .container {
