--- a/src/index.njk
+++ b/src/index.njk
@@ -19,5 +19,8 @@ description: "Kindle Book Notes"
                 </div>
             {% endfor %}
         </div>
+        <p class="mt-3 text-gray-600 ">
+            <span class="font-bold">Total Books:</span>
+            {{bookData.length}}</p>
     </div>
 </section>
