--- a/src/_css/app.css
+++ b/src/_css/app.css
@@ -39,7 +39,7 @@ i {
 }
 
 .book {
-  @apply flex items-center justify-between w-full p-6 bg-white border border-gray-300;
+  @apply flex items-center justify-between w-full p-6 border border-gray-300;
 }
 
 .book p {
