--- a/src/index.njk
+++ b/src/index.njk
@@ -9,8 +9,8 @@ description: "Kindle Book Notes"
         <h2 class="mb-2 text-base font-bold">My Books</h2>
         <div class="booklist">
             {% for book in bookData %}
-                <div class="relative">
-                    <a class="book {% if book.idx % 2 === 0 %} bg-white {% else %} bg-gray-200 {% endif %} hover:bg-gray-400 focus:outline-none active:bg-gray-400" href="/notes/{{book.fileName}}">
+                <div class="book relative {% if book.idx % 2 === 0 %} bg-white {% else %} bg-gray-200 {% endif %} hover:bg-gray-400 focus:outline-none active:bg-gray-400">
+                    <a class="w-full h-full p-6" href="/notes/{{book.fileName}}">
                         <p class="text-base font-bold md:text-lg">{{book.title}}</p>
                     </a>
                     <a href="{{book.downloadLink}}" class="absolute downloadIcon ">
