--- a/src/index.njk
+++ b/src/index.njk
@@ -12,6 +12,9 @@ description: "Kindle Book Notes"
                 <div class="book relative {% if book.idx % 2 === 0 %} bg-white {% else %} bg-gray-200 {% endif %} hover:bg-gray-400 focus:outline-none active:bg-gray-400">
                     <a class="w-full h-full p-6" href="/notes/{{book.fileName}}">
                         <p class="text-base font-bold md:text-lg">{{book.title}}</p>
+                        {% if book.author %}
+                            <p class="text-sm text-gray-500">{{book.author}}</p>
+                        {% endif %}
                     </a>
                     <a href="{{book.downloadLink}}" class="absolute downloadIcon ">
                         <i class="text-gray-500 fa fa-download hover:text-teal-700" aria-label="download"></i>
