--- a/src/index.njk
+++ b/src/index.njk
@@ -10,7 +10,7 @@ description: "Kindle Book Notes"
         <div class="booklist">
             {% for book in bookData %}
                 <div class="book relative {% if book.idx % 2 === 0 %} bg-white {% else %} bg-gray-200 {% endif %} hover:bg-gray-400 focus:outline-none active:bg-gray-400">
-                    <a class="w-full h-full p-6" href="/notes/{{book.fileName}}">
+                    <a class="w-full h-full p-4 md:p-6" href="/notes/{{book.fileName}}">
                         <p class="text-base font-bold md:text-lg">{{book.title}}</p>
                         {% if book.author %}
                             <p class="text-sm text-gray-500">{{book.author}}</p>
